Thu May  2 16:55:43 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (id_locals): use cached ID.

	* vm.c (ruby_thread_init): ditto.

	* defs/id.def: add more predefined IDs used in core.

Thu May  2 13:42:42 2013  Ryan Davis  <ryand-ruby@zenspider.com>

	* lib/minitest/*: Imported minitest 4.7.4 (r8483)
	* test/minitest/*: ditto

Thu May  2 11:32:22 2013  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (poll_child_status): [experimental] set the cause of
	  a child's death to status if its exitcode seems to be an error.

	* test/ruby/test_process.rb (TestProcess#test_no_curdir): maybe now
	  we can test it.

	* test/ruby/test_thread.rb (TestThread#test_thread_timer_and_interrupt):
	  ditto.

Thu May  2 11:24:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/yaml.rb: nodoc EngineManager, add History doc #8344

Wed May  1 21:11:17 2013  Tanaka Akira  <akr@fsij.org>

	* time.c (localtime_with_gmtoff_zone): musl libc may return NULL for
	  tm_zone.

Wed May  1 18:59:36 2013  Benoit Daloze  <eregontp@gmail.com>

	* enum.c (Enumerable#chunk): fix grammar of error message
	  for symbols beginning with an underscore [Bug #8351]

Wed May  1 16:47:47 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/curses/extconf.rb (curses_version): try once for each tests, a
	  function or a variable.  fallback to variable for old SVR4.

Wed May  1 16:17:46 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): extensions not to be installed should not
	  make static libraries, but make dynamic libraries always.

Wed May  1 12:20:00 2013  Zachary Scott  <zachary@zacharyscott.net>

	* lib/rake/version.rb: Fix RDoc warning with  :include: [Bug #8347]

Wed May  1 11:40:25 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defs/id.def (predefined): add "idProc".

	* eval.c (frame_func_id): use predefined IDs.

	* proc.c (mnew, mproc, mlambda): use predefined IDs.

	* vm.c (rb_vm_control_frame_id_and_class): ditto.

	* vm.c (Init_VM): ditto.
