@@ -1,3 +1,8 @@
+Thu May  2 17:32:45 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* marshal.c (copy_ivar_i): get rid of overwriting already copied
+	  instance variales.  c.f. [Bug #8276]
+
 Thu May  2 16:55:43 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* thread.c (id_locals): use cached ID.
